--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -8,15 +8,20 @@
    position: relative;
    overflow: hidden;
    margin: 0 1rem 1rem;
+   background-image: url(https://www.apple.com/v/home/bc/images/heroes/back-to-school-2023/hero_bts2023_startframe__f787lg06y3ue_large.jpg);
+   background-size: cover;
+   background-position: 50% 95%;
 
    @media only screen and (max-width: $bp-large) {
       padding: 2rem;
-      background-image: url(https://www.apple.com/v/home/bc/images/heroes/back-to-school-2023/hero_bts2023_startframe__f787lg06y3ue_large.jpg);
-      background-size: cover;
-      background-position: 50% 95%;
    }
+
    @media only screen and (max-width: $bp-med) {
       height: 95dvh;
+   }
+
+   .bg-video {
+      height: 100%;
    }
 }
 
